--- a/app/plugin/soccer/element/wc-resource/player/wc-resource-soccer-player.html
+++ b/app/plugin/soccer/element/wc-resource/player/wc-resource-soccer-player.html
@@ -8,7 +8,7 @@
                 width: 100%;
                 color: white;
                 font-size: 40px;
-                background-color: #0b97c4;
+                background-color: red;
                 display: flex;
                 align-items: center;
                 justify-content: center;
