--- a/app/plugin/soccer/element/wc-resource/benchs/wc-resource-soccer-benches.html
+++ b/app/plugin/soccer/element/wc-resource/benchs/wc-resource-soccer-benches.html
@@ -8,7 +8,7 @@
                 width: 100%;
                 color: white;
                 font-size: 40px;
-                background-color: #0b97c4;
+                background-color: green;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
@@ -39,19 +39,6 @@
                         observer: '_playersChange',
                     }
                 };
-            }
-
-            /**
-             * @param newValue
-             * @param oldValue
-             * @private
-             */
-            _playersChange(newValue, oldValue) {
-                if (!newValue) {
-                    return;
-                }
-
-                console.log('DATI PREPLACEMENT', newValue);
             }
         }
 
