--- a/app/plugin/soccer/element/wc-resource/cards/wc-resource-soccer-cards.html
+++ b/app/plugin/soccer/element/wc-resource/cards/wc-resource-soccer-cards.html
@@ -8,7 +8,7 @@
                 width: 100%;
                 color: white;
                 font-size: 40px;
-                background-color: #0b97c4;
+                background-color: yellow;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
