--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -7,6 +7,8 @@
     <link rel="import" href="element/layout/application-layout.html">
     <link rel="import" href="bower_components/paper-toast/paper-toast.html">
 
+    <script src="lib/archive/Archive.js"></script>
+
     <script src="lib/hydrator/HydratorAware.js"></script>
     <script src="lib/hydrator/PropertyHydrator.js"></script>
     <script src="lib/hydrator/AggregatePropertyHydrator.js"></script>
